# pyutil

./: README.md  pyproject.toml  setup.py
src/pyutil/: __init__.py
src/pyutil.egg-info/: PKG-INFO  SOURCES.txt
