[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "pyutil"
version = "0.0.1"
authors = [{ name = "ZachTheArcticFox", email = "me@zachthearcticfox.uk" }]
description = "Useful utilities"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/zachthearcticfox/pyutil"
"Bug Tracker" = "https://github.com/zachthearcticfox/pyutil/issues"

[tool.setuptools]
package-dir = {"" = "src"}